--- a/First Portfolio Project.ipynb
+++ b/First Portfolio Project.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test_features.csv', 'train_features.csv', 'train_salaries.csv']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.listdir(\"data/\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +109,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>types</th>\n",
+       "      <th>counts</th>\n",
+       "      <th>distincts</th>\n",
+       "      <th>nulls</th>\n",
+       "      <th>missing ratio</th>\n",
+       "      <th>uniques</th>\n",
+       "      <th>skewness</th>\n",
+       "      <th>kurtosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>jobId</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[JOB1362684407687, JOB1362684407688, JOB13626...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>companyId</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[COMP37, COMP19, COMP52, COMP38, COMP7, COMP1...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jobType</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[CFO, CEO, VICE_PRESIDENT, MANAGER, JUNIOR, J...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>degree</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[MASTERS, HIGH_SCHOOL, DOCTORAL, BACHELORS, N...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>major</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[MATH, NONE, PHYSICS, CHEMISTRY, COMPSCI, BIO...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>industry</th>\n",
+       "      <td>object</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[HEALTH, WEB, AUTO, FINANCE, EDUCATION, OIL, ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <td>int64</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[10, 3, 8, 2, 23, 9, 1, 17, 24, 7, 21, 13, 11...</td>\n",
+       "      <td>0.001674</td>\n",
+       "      <td>-1.205127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "      <td>int64</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[[83, 73, 38, 17, 16, 31, 24, 70, 54, 68, 30, ...</td>\n",
+       "      <td>-0.001139</td>\n",
+       "      <td>-1.199019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      types   counts  distincts  nulls  missing ratio  \\\n",
+       "jobId                object  1000000    1000000      0            0.0   \n",
+       "companyId            object  1000000         63      0            0.0   \n",
+       "jobType              object  1000000          8      0            0.0   \n",
+       "degree               object  1000000          5      0            0.0   \n",
+       "major                object  1000000          9      0            0.0   \n",
+       "industry             object  1000000          7      0            0.0   \n",
+       "yearsExperience       int64  1000000         25      0            0.0   \n",
+       "milesFromMetropolis   int64  1000000        100      0            0.0   \n",
+       "\n",
+       "                                                               uniques  \\\n",
+       "jobId                [[JOB1362684407687, JOB1362684407688, JOB13626...   \n",
+       "companyId            [[COMP37, COMP19, COMP52, COMP38, COMP7, COMP1...   \n",
+       "jobType              [[CFO, CEO, VICE_PRESIDENT, MANAGER, JUNIOR, J...   \n",
+       "degree               [[MASTERS, HIGH_SCHOOL, DOCTORAL, BACHELORS, N...   \n",
+       "major                [[MATH, NONE, PHYSICS, CHEMISTRY, COMPSCI, BIO...   \n",
+       "industry             [[HEALTH, WEB, AUTO, FINANCE, EDUCATION, OIL, ...   \n",
+       "yearsExperience      [[10, 3, 8, 2, 23, 9, 1, 17, 24, 7, 21, 13, 11...   \n",
+       "milesFromMetropolis  [[83, 73, 38, 17, 16, 31, 24, 70, 54, 68, 30, ...   \n",
+       "\n",
+       "                     skewness  kurtosis  \n",
+       "jobId                     NaN       NaN  \n",
+       "companyId                 NaN       NaN  \n",
+       "jobType                   NaN       NaN  \n",
+       "degree                    NaN       NaN  \n",
+       "major                     NaN       NaN  \n",
+       "industry                  NaN       NaN  \n",
+       "yearsExperience      0.001674 -1.205127  \n",
+       "milesFromMetropolis -0.001139 -1.199019  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "explore_data(train_features)"
    ]
@@ -669,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
