--- a/Salary_Prediction_Notebook.ipynb
+++ b/Salary_Prediction_Notebook.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\" style='text-align: justify;font-family:Georgia;font-size: 18px; line-height: 1.6;color:black'>\n",
+    "<div style='text-align: justify;font-family:Georgia;font-size: 18px; line-height: 1.6;color:black'>\n",
     "In this competitive world, every company wants to hire the best resources available on the market. Therefore, the Human Resource (HR) department plays an important role in hiring new resources for the company. As we know that there are many steps involved in finding and hiring the right candidates but the important and final one is giving an acceptable offer to candidates. After spending so much time searching and interviewing candidates, the HR team must give a competitive salary to hire them. For the HR team, determining the salary range for candidates involves so many factors like industry, location, years of experience, roles, and responsibilities. As it is a very complex process, they need a quick and reliable system that they can use for determining a competitive salary for candidates. <br>  <br> The goal of this project is to predict a competitive salary for candidates based on the industry, role, years of experience, and many attributes. This project is using python and its libraries for salary prediction.\n",
     "    \n",
     "</div>"
@@ -1416,7 +1416,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1561,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -1580,6 +1579,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
